# Equipo35_MLOps

./: Makefile  README.md  StudentPerformance.ipynb  dvc.yaml  params.yaml  pyproject.toml  requirements.txt  ucimlrepo.ipynb
.dvc/: config
data/processed/: .gitignore
data/raw/: .gitignore  Sapfile1.arff.dvc  student-mat.csv.dvc  student-por.csv.dvc  student_data_df.csv.dvc
docs/: mkdocs.yml
docs/docs/: index.md
equipo35_mlops/: StudentPerformance.py  best_model.py  data_explorer.py  dataset.py  experiment.py  features.py  main.py  plots.py  pyvenv.cfg
equipo35_mlops/modeling/: predict.py  student_performance.py  train.py
equipo35_mlops/schemas/: data_schemas.py
equipo35_mlops/stages/: download_data.py  evaluate.py  evaluation.py  preprocessing.py  training.py
equipo35_mlops/tests/: test_input_data.py  test_model_quality.py  test_model_settings.py  test_preprocessing.py
mlops_team35/: __init__.py  dataset.py  plots.py
mlops_team35/modeling/: predict.py  train.py
models/: .gitignore  random_forest.pkl  svm.pkl  xgboost.pkl
notebooks/: GridSearch.ipynb
server/: Dockerfile  logistic_regression.pkl  main.py  readme.md  requirements.txt  run.sh
server/models/: student.py
